# cyborgdb-migrate

./: .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  PRD.md  README.md  TODO.md  example-config.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: configuration.md
scripts/seed/: README.md  dataset.py  docker-compose.yml  requirements.txt  seed.py
scripts/seed/targets/: chromadb_local.py  chromadb_remote.py  milvus.py  pinecone_.py  qdrant.py  weaviate_.py
src/cyborgdb_migrate/: app.py  checkpoint.py  cli.py  clipboard.py  config.py  cyborgdb_ascii.txt  destination.py  engine.py  models.py  theme.css  version_check.py
src/cyborgdb_migrate/screens/: cyborgdb_connect.py  dest_index.py  migrate.py  source_credentials.py  source_inspect.py  source_select.py  summary.py  welcome.py
src/cyborgdb_migrate/sources/: __init__.py  base.py  chromadb.py  milvus.py  pinecone.py  qdrant.py  weaviate.py
src/cyborgdb_migrate/widgets/: key_warning.py  logo.py  source_form.py  step_header.py
tests/: test_app.py  test_checkpoint.py  test_cli.py  test_clipboard.py  test_config.py  test_destination.py  test_engine.py  test_models.py  test_version_check.py
tests/smoke/: _helpers.py  conftest.py  constraints.txt  docker-compose.yml  test_chromadb_to_service.py  test_milvus_to_service.py  test_pinecone_import.py  test_qdrant_to_service.py  test_weaviate_to_service.py
tests/sources/: test_chromadb.py  test_milvus.py  test_pinecone.py  test_qdrant.py  test_weaviate.py
