[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyborgdb-migrate"
version = "0.1.0"
description = "TUI wizard and CLI for migrating vector data into CyborgDB"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.86.0",
    "tree-sitter",
    "tree-sitter-python",
    "cyborgdb",
    "numpy>=1.21.0",
    "tomli>=1.1.0;python_version<'3.11'",
]

[project.optional-dependencies]
pinecone = ["pinecone"]
qdrant = ["qdrant-client"]
weaviate = ["weaviate-client"]
chromadb = ["chromadb"]
milvus = ["pymilvus"]
all = [
    "pinecone",
    "qdrant-client",
    "weaviate-client",
    "chromadb",
    "pymilvus",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "textual-dev",
]

[project.scripts]
cyborgdb-migrate = "cyborgdb_migrate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
