[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyborgdb-migrate"
version = "0.17.0"
description = "TUI wizard and CLI for migrating vector data into CyborgDB"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Cyborg Inc."},
]
keywords = [
    "vector-database",
    "migration",
    "cyborgdb",
    "pinecone",
    "qdrant",
    "weaviate",
    "chromadb",
    "milvus",
    "embeddings",
    "tui",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Runtime deps are capped at the next known-incompatible major so a surprise
# upstream major release can't silently break us. Dependabot proposes raising
# these caps; the CI + smoke test gate the bumps. See "Dependency policy" in
# the README.
dependencies = [
    "textual>=0.86.0,<9",
    "cyborgdb>=0.17,<0.18",
    "numpy>=1.21.0,<3",
    "tomli>=1.1.0;python_version<'3.11'",
]

# Source-connector extras. These clients talk to the user's OWN running server,
# so they are ranges (compatible with the server the user already runs), never
# exact pins. Upper bounds cap the next major; Dependabot raises them.
[project.optional-dependencies]
pinecone = ["pinecone>=5,<10"]
qdrant = ["qdrant-client>=1.7,<2"]
weaviate = ["weaviate-client>=4,<5"]
chromadb = ["chromadb>=0.5,<2"]
milvus = ["pymilvus>=2.3,<4"]
syntax = [
    "tree-sitter",
    "tree-sitter-python",
]
all = [
    "pinecone>=5,<10",
    "qdrant-client>=1.7,<2",
    "weaviate-client>=4,<5",
    "chromadb>=0.5,<2",
    "pymilvus>=2.3,<4",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "textual-dev",
]
# Smoke-test extras — used by tests/smoke/ in the publish.yml workflow.
# Keep minimal (pytest only); chromadb client comes from the `chromadb` extra.
smoke = [
    "pytest",
]

[project.scripts]
cyborgdb-migrate = "cyborgdb_migrate.cli:main"

[project.urls]
Homepage = "https://github.com/cyborginc/cyborgdb-migrate"
Repository = "https://github.com/cyborginc/cyborgdb-migrate"
Issues = "https://github.com/cyborginc/cyborgdb-migrate/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
